--- a/css/style.css
+++ b/css/style.css
@@ -188,6 +188,10 @@ h4{
 #defaultLogo{
     transition: .3s ease-in-out;
 }
+.slick-dots li button:focus:before,
+.slick-dots li button:hover:before{
+    opacity: .25;
+}
 /* #General */
 
 /* ******************************************** */
@@ -903,6 +907,10 @@ header.sticky-header nav .menu-wrapper > a::after{
     background-color: var(--black-2);
     border: none;
     margin-bottom: 12px;
+    border-radius: 12px;
+}
+.accordion-item:first-of-type .accordion-button{
+    border-radius: 12px;
 }
 .faq-section .accordion-item:last-child{
     margin-bottom: 162px;
@@ -917,6 +925,7 @@ header.sticky-header nav .menu-wrapper > a::after{
     padding: 29px 60px;
     outline: 0;
     justify-content: space-between;
+    border-radius: 12px;
 }
 .faq-section .accordion-button::after{
     background-image: var(--accordion-icon);
