--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -782,6 +782,9 @@
         min-height: 100vh;
         margin-block: 45px;
     }
+    .home-section .owl-theme .owl-nav.disabled + .owl-dots{
+        margin-top: 45px;
+    }
     .home-section-container{
         padding-top: 120px;
     }
