--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -433,8 +433,7 @@
     footer .footer-bottom{
         flex-wrap: wrap;
     }
-    footer .footer-bottom .copyright-text,
-    footer .footer-bottom .social-media-icons{
+    footer .footer-bottom .copyright-text{
         order: 2;
         margin-bottom: 35px;
         margin-right: 20px;
