--- a/css/style.css
+++ b/css/style.css
@@ -292,8 +292,19 @@ h4{
     transition: all 0.3s ease-in-out;
     border-radius: 10px;
 }
+.black{
+    background-color: var(--black)!important;
+}
 .black-line{
     background-color: var(--black)!important;
+    width: 50px;
+    height: 5px;
+    display: block;
+    margin: 8px auto;
+    -webkit-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    border-radius: 10px;
 }
 .hamburger.is-active .line:nth-child(2){
     opacity: 0;
@@ -310,6 +321,9 @@ h4{
     -ms-transform: translateY(-13px) rotate(-45deg);
     -o-transform: translateY(-13px) rotate(-45deg);
     transform: translateY(-13px) rotate(-45deg);
+}
+.hamburger.is-active .line{
+    background-color: var(--black)!important;
 }
 /* #Mobile Header */
 
@@ -912,6 +926,9 @@ header.sticky-header nav .menu-wrapper > a::after{
 .accordion-item:first-of-type .accordion-button{
     border-radius: 12px;
 }
+.accordion-item:last-of-type .accordion-button.collapsed{
+    border-radius: 12px;
+}
 .faq-section .accordion-item:last-child{
     margin-bottom: 162px;
 }
@@ -959,6 +976,14 @@ header.sticky-header nav .menu-wrapper > a::after{
 /* ******************************************** */
 
 /* Footer */
+@keyframes copyTextAnim{
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
+}
 .footer-top{
     background-color: var(--black);
     height: 388px;
@@ -1070,6 +1095,7 @@ footer .footer-bottom .copy-text{
     line-height: normal;
     color: var(--gray);
     margin-bottom: 0;
+    animation: copyTextAnim 3s ease-in-out forwards;
 }
 footer .footer-bottom .social-media-icons{
     display: flex;
@@ -1163,6 +1189,16 @@ footer .offset-col{
 
 
 /* -------------- PAGE -------------- */
+
+/* General */
+.page .section{
+    padding-top: 230px;
+    margin-bottom: 350px;
+}
+.page .section h1{
+    margin-bottom: 120px;
+}
+/* #General */
 
 /* Page - Egitimlerimiz */
 .page .highlights-section{
@@ -1336,7 +1372,7 @@ footer .offset-col{
 
 /* Page - Kurumsal */
 .page .kurumsal{
-    padding-block: 260px 502px;
+    padding-bottom: 250px;
     background-color: var(--black);
     position: relative;
 }
@@ -1347,7 +1383,6 @@ footer .offset-col{
 }
 .page .kurumsal .wrapper{
     width: 938px;
-    margin-top: 198px;
     margin-inline: auto;
     position: relative;
 }
@@ -1413,7 +1448,7 @@ footer .offset-col{
 .page.title-center .title{
     font-size: 50px;
     text-align: center;
-    margin-bottom: 61px;
+    margin-bottom: 60px;
     padding-inline: 250px;
 }
 
@@ -1672,7 +1707,7 @@ footer .offset-col{
     background-color: var(--white-2);
     height: 284px;
     border-radius: 20px;
-    padding: 70px 25px;
+    padding: 50px 25px;
 }
 .page.education-detail .studies-section .comment-area p{
     margin-bottom: 30px;
@@ -1743,7 +1778,6 @@ footer .offset-col{
 
 .page .price-section{
     margin-top: 140px;
-    padding-bottom: 90px;
 }
 .page .price-section .box-wrapper{
     background-color: var(--black-4);
@@ -1868,6 +1902,7 @@ footer .offset-col{
     margin: auto;
     display: block;
     border: none;
+    border-radius: 12px;
 }
 .video-popup{
     display: none;
@@ -1959,14 +1994,15 @@ footer .offset-col{
 }
 .page .educations-section .edu-btn{
     background-color: var(--black);
-    width: 49px;
-    height: 49px;
+    width: 50px;
+    height: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
     border-radius: 50%;
     transform: scaleX(-1);
     user-select: none;
+    flex-shrink: 0;
 }
 .page .educations-section .edu-btn img{
     width: 17px;
@@ -2013,14 +2049,10 @@ footer .offset-col{
 .page .price-section .light-box .product-features span{
     color: var(--black);
 }
-.page.chef-detail .price-section .title{
-    margin-bottom: 85px;
-}
 .page .faq-section{
     background-color: transparent;
 }
 .page .faq-section h1{
-    margin-top: 122px;
     margin-bottom: 70px;
 }
 .page .faq-section .accordion-button,
@@ -2100,6 +2132,106 @@ footer .offset-col{
     align-items: flex-start;
 }
 /* #Page - Chef Detay */
+
+/* ************************************ */
+
+/* Page - Iletisim Bilgileri */
+.page.contact-page .contact-area .col-md-6{
+    position: relative;
+    z-index: 5;
+}
+.page .contact-box{
+    height: 240px;
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 25px;
+    border-radius: 12px;
+    transition: .3s ease-in-out;
+}
+.page .contact-box:hover{
+    box-shadow: 0px 18px 80px 0px rgba(207, 175, 146, 0.30);
+}
+.page .contact-box .box-icon svg{
+    font-size: 55px;
+    color: #CFAF92;
+}
+.page .contact-box .box-info{
+    display: flex;
+    flex-direction: column;
+}
+.page .contact-box .box-info span{
+    color: #717171;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 400;
+}
+.page .contact-box .box-info a{
+    color: var(--black);
+    font-size: 20px;
+    font-weight: 600;
+    text-decoration-line: underline;
+    text-align: center;
+}
+.page .contact-box .box-info .address{
+    text-decoration: none;
+}
+.page .gmap{
+    height: auto;
+    position: relative;
+    margin-top: -120px;
+    z-index: 3;
+}
+.page .gmap iframe{
+    width: 100%;
+    height: 740px;
+}
+.page .gmap .location-img{
+    position: absolute;
+    top: 30%;
+    right: 43%;
+}
+.page .form-wrapper{
+    background-color: #fff;
+    border-radius: 12px;
+    padding: 40px 35px;
+    width: 930px;
+    margin-inline: auto;
+    position: relative;
+    z-index: 5;
+    margin-top: -150px;
+}
+.page .form-wrapper input{
+    height: 50px;
+    margin-bottom: 18px;
+}
+.page .form-wrapper textarea{
+    height: 120px;
+    margin-bottom: -25px;
+}
+.page .form-wrapper input,
+.page .form-wrapper textarea{
+    border-radius: 12px;
+    background-color: var(--white-2);
+    border: none;
+    outline: none;
+    padding: 20px 25px;
+    display: block;
+    width: 100%;
+    font-size: 18px;
+}
+.page .form-wrapper input::placeholder,
+.page .form-wrapper textarea::placeholder{
+    color: var(--black);
+    font-size: 18px;
+}
+.page.contact-page .section,
+.page.corporate .section{
+    margin-bottom: 0;
+}
+/* #Page - Iletisim Bilgileri */
 
 /* -------------- PAGE -------------- */
 
