--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -49,9 +49,6 @@
     .faq-section .accordion-item:last-child{
         margin-bottom: 70px;
     }
-    .faq-section h1{
-        margin-top: 70px;
-    }
     /* #FAQ Section */
 }
 
@@ -196,6 +193,10 @@
     .page.title-center .title{
         padding-inline: 300px;
     }
+
+    .page.education-detail .highlights-section{
+        padding-top: 250px;
+    }
     /* #Page - Egitimlerimiz */
 
     /* Page - Chef Detay */
@@ -208,21 +209,11 @@
     .page.chef-detail .educations-section .box-img img{
         height: 300px;
     }
-    .page .educations-section,
-    .page.chef-detail .price-section,
-    .page .studies-section,
-    .page .faq-section,
-    .page.chef-detail .chef-pagination{
-        margin-top: 80px;
-    }
     .page.chef-detail .price-section .row .col-md-3{
         width: 300px;
     }
     .page .studies-section{
         padding-top: 0;
-    }
-    .page .faq-section h1{
-        margin-top: 0;
     }
     /* #Page - Chef Detay */
 }
@@ -347,6 +338,29 @@
     }
     .page .chef-info{
         margin-left: 15px;
+    }
+
+    .page.education-detail .wrapper{
+        width: 100%;
+    }
+    .page.education-detail .wrapper h1{
+        text-align: center;
+    }
+    .page.education-detail .highlights-content-area{
+        align-items: center;
+        text-align: center;
+    }
+    .page .educations-section .box-img img{
+        height: 280px;
+    }
+    .page .box-img .profile-img{
+        width: 70px;
+    }
+    .page.education-detail .educations-section .edu-title{
+        font-size: 18px;
+    }
+    .page .edu-chef{
+        font-size: 16px;
     }
     /* #Page - Egitimlerimiz */
 
@@ -679,6 +693,10 @@
     .page .lr-wrapper .left{
         padding-inline: 0;
     }
+
+    .page.education-detail .highlights-section .highlights-content{
+        justify-content: center!important;
+    }
     /* #Page - Egitimlerimiz */
 
     /* Page - Chef Detay */
@@ -746,6 +764,10 @@
 
 @media (max-width: 768px){
     /* Page - Egitimlerimiz */
+    .page.education-detail .highlights-section{
+        padding-top: 200px;
+    }
+    
     .page .chef-img{
         width: 110px;
         height: 110px;
@@ -835,6 +857,9 @@
     }
     .page.chef-detail .right-pagi .chef-info a{
         margin-right: 30px;
+    }
+    .page.education-detail .educations-section .edu-title{
+        flex-direction: row;
     }
     /* #Page - Chef Detay */
 }
@@ -1226,7 +1251,14 @@
     }
     .page .section{
         padding-top: 150px;
-        margin-bottom: 250px;
+        margin-bottom: 80px;
+    }
+    body section:not(:nth-child(1)){
+        margin-top: 40px;
+    }
+    body section.faq-section{
+        margin-top: 0;
+        padding-top: 40px;
     }
     /* #General */
 
@@ -1317,6 +1349,10 @@
         margin-left: 0;
         justify-content: flex-end;
     }
+    .page.education-detail .highlights-section .highlights-content .box{
+        margin-left: 11%!important;
+        justify-content: flex-start;
+    }
     .highlights-section .highlights-content .box:nth-child(1){
         justify-content: flex-start;
     }
@@ -1331,7 +1367,6 @@
 
     /* FAQ Section */
     .faq-section h1{
-        margin-top: 40px;
         margin-bottom: 25px;
     }
     .faq-section .accordion-item:last-child{
@@ -1432,6 +1467,21 @@
         margin-left: 10%;
         justify-content: flex-start;
     }
+    .page.education-detail .highlights-section{
+        padding-top: 160px;
+    }
+    .page .highlights-section .highlights-content{
+        gap: 10px;
+    }
+    .page.education-detail .highlights-content-area{
+        gap: 25px;
+    }
+    .page.education-detail .highlights-section{
+        height: 100vh!important;
+    }
+    .page.education-detail .educations-section .box-img img{
+        height: 240px;
+    }
     /* #Page - Egitimlerimiz */
 
     /* Page - Chef Detay */
@@ -1451,13 +1501,6 @@
     .page.title-center .title,
     .page .faq-section h1{
         margin-bottom: 25px;
-    }
-    .page .educations-section,
-    .page.chef-detail .price-section,
-    .page .studies-section,
-    .page .faq-section,
-    .page.chef-detail .chef-pagination{
-        margin-top: 60px;
     }
     .page .price-section .box-wrapper .product-price{
         font-size: 34px;
@@ -1489,6 +1532,12 @@
         width: 70%!important;
     }
     /* #Employee Section */
+
+    /* Page - Egitim */
+    .page.education-detail .highlights-section .highlights-content .box{
+        margin-left: 8%!important;
+    }
+    /* #Page - Egitim */
 }
 
 @media (max-width: 425px){
@@ -1524,9 +1573,6 @@
     /* #Highlights Section */
 
     /* FAQ Section */
-    .faq-section h1{
-        margin-top: 30px;
-    }
     .faq-section .accordion-item:last-child{
         margin-bottom: 30px;
     }
@@ -1583,6 +1629,9 @@
     .page.chef-detail .circle-btn{
         width: 40px;
         height: 40px;
+    }
+    .page .studies-section{
+        margin-bottom: 40px;
     }
     /* #Page - Chef Detay */
 }
